<resources>
    <string name="app_name">BornMeme</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="user_collection_text">Users</string>
    <string name="post_collection_text">Posts</string>
    <string name="comment_collection_text">Comments</string>
    <string name="folder_collection_text">Folders</string>
    <string name="remind_delete_text">刪除提醒</string>
    <string name="sure_text">確定</string>
    <string name="check_delete_text">即將刪除</string>
    <string name="delete_text">刪除</string>
    <string name="download_success_text">下載完成</string>
    <string name="click_email_box_text">信箱修改開發中，加速要加錢</string>
    <string name="name_error_text">普林ドキドキ</string>
    <string name="name_box_error">字數超過了</string>
    <string name="snack_default_text">資料未完成將填入預設值，免客氣</string>
    <string name="snack_default_check">感謝有你</string>
    <string name="silly_usual">傻逼日常</string>
    <string name="edit_no_input">不想填寫內容可以輸入空格唷~(･8･)</string>
    <string name="file_text">Files</string>
    <string name="text_text">Texts</string>
    <string name="post_text">Posts</string>
    <string name="like_text">Likes</string>
    <string name="text_click">Add Text</string>
    <string name="preview_btn">Preview</string>
    <string name="publish_btn">Publish</string>
    <string name="save_btn">Save</string>
    <string name="module_text">Choose The Perfect Images for Editor</string>
    <string name="profile_name_text">Name</string>
    <string name="default_text">Default</string>
    <string name="introduce_text">Introduce</string>
    <string name="email_text">Email</string>
    <string name="followers_list_text">Followers List</string>
    <string name="block_list_text">Block List</string>
    <string name="follow_list_text">Follow List</string>
    <string name="save_profile_text">Save And Update</string>
    <string name="text_to_reply_hint">Adding text to reply …</string>
    <string name="publish_text">Publish</string>
    <string name="chip_reply_to">Reply To:</string>
    <string name="time_text">yyyy/mm/dd 00:00:00</string>
    <string name="yes_btn">對沒錯</string>
    <string name="no_btn">再想想</string>
    <string name="report_text">檢舉</string>
    <string name="block_text">封鎖</string>
    <string name="setting_text">設定</string>
    <string name="enter_folder_name">Enter Folder Name</string>
    <string name="enter_title_hint">Adding Title Here</string>
    <string name="enter_tag_hint">Adding Tag Here</string>
    <string name="img_detail_follow_text">Follow</string>
    <string name="img_detail_following_text">Following</string>
    <string name="comment_recycle_text">雖然現在這裡有點安靜 …</string>
    <string name="bornmeme">BornMeme.</string>
    <string name="see_more_text">更多回覆</string>
    <string name="reply_btn">回覆</string>
    <string name="back_btn">收起回覆</string>
    <string name="choose_report_text">請選擇檢舉原因</string>
    <string name="block_ask_text">是否要將此用戶封鎖?</string>
    <string name="block_sure_text">你確定要封鎖人家嗎… \n 再也看不見的那種?</string>
    <string name="enter_hint_text">Adding Text Here</string>
    <string name="service_text">使用條款</string>
    <string name="private_text">隱私政策</string>
    <string name="to_setting_text">前往設定</string>
    <string name="cancel_text">取消</string>
    <string name="refuse_permission">拒絕存取</string>
    <string name="input_yet">尚未輸入文字</string>
    <string name="pack_icon">Pack icon</string>
    <string name="sticker_icon">Sticker icon</string>
    <string name="close_sticker_preview"> 點一下關閉預覽 </string>
    <string name="fallback_040"> %1$s 這邊不支援唷 </string>
    <string name="fallback_041">E041: Unexpected IOException when converting sticker</string>
    <string name="switch_050">E050: IllegalStateException when switching packs. Try switching away from and back to application</string>
    <string name="imported_020">找到 %1$d 張梗圖</string>
    <string name="imported_031">有些圖片無法成功載入 (%1$d 成功)</string>
    <string name="imported_032">有些圖片無法成功載入 (%1$d imported)</string>
    <string name="imported_033">有些圖片無法成功載入 (%1$d imported)</string>
    <string name="not_allow_prmission">看起來你還沒有打開權限 \n 打開之後即可完整使用功能哦!</string>
    <string name="continue_text">繼續</string>
    <string name="service_text_with_url">點擊 同意並繼續 即代表您同意並確認您已閱讀我們的服務條款與隱私政策，了解我們如何收集、使用與分享您的資料。</string>
    <string name="open_keyboard">前往設定打開鍵盤</string>
    <string name="setting_photo">選擇梗圖相簿資料夾</string>
    <string name="service_and_policy_title">使用條款與隱私權政策</string>
    <string name="use_policy_text">歡迎使用 BornMeme.！本使用條款（或稱「條款」）係規範您使用 BornMeme. 的行為（除非我們明確聲明另有適用的條款，而非本條款），以及提供 BornMeme. 服務（下稱「服務」）的相關資訊，概要內容如下。若建立 BornMeme. 帳號或使用 BornMeme.，即表示您同意本條款。</string>
    <string name="p_1">我們同意提供您 BornMeme 服務，包括所有產品、功能，拉近您與喜愛的人事物之間的距離。提供的服務包括：讓用戶依個人喜好建立內容、與他人聯繫交流、發掘新事物和分享資訊。\n每個人都有所不同，因此我們協助您建立內容、分享資訊、增加曝光度並與站內的用戶交流。我們也希望透過您所重視並分享的經驗，強化您與他人之間的關係。\n因此，我們打造的系統旨在瞭解您和其他用戶關心的人事物，並運用該等資訊來協助您建立、找到、參與和分享對您而言重要的體驗。我們開發並運用各種工具，為社群成員提供所需資源，包括在我們認為成員可能需要協助時，向其提供協助，使其獲得廣泛的正面體驗。\n我們也建立相關團隊和系統，專門處理濫用、違反使用條款及政策等情事，以及有害及詐欺的行為。我們會使用所有手邊既有的資料（包含您的資料），盡力維護平台安全，同時也可能與其他執法機關分享 濫用或有害內容的相關資訊。\n本服務的一大重點，在於開發並使用尖端技術，使我們大規模地為遍及全球的廣大社群，個人化、保護及改善我們的服務。我們會運用既有資料來分析本服務，並與他人合作研究，一同提升本服務之品質，為我們的社群創造福祉。\n若要使用我們承諾提供的服務，您也必須承諾遵守以下事項。</string>
    <string name="information_policy_title">資料政策</string>
    <string name="information_policy_text">為向您提供本服務，我們必須蒐集您的資料。 您可以透過以下方式控管資料，例如調整 BornMeme隱私設定和帳號安全設定。 您必須同意《資料政策》，才能使用 BornMeme.</string>
    <string name="who_can_use_title">誰可以使用 BornMeme. 及禁止的使用情況</string>
    <string name="who_can_use_text">我們希望盡力營造開放包容的服務環境，同時兼顧安全可靠與法規遵循。因此，加入 BornMeme. 之前，請您務必確認自身符合以下條件。您必須年滿 16 歲，或達到您所在國家/地區法律規定可使用 BornMeme. 的最低年齡。\n依適用法律規定，您必須有權使用我們的任何服務；如果您名列適用的拒絕往來對象名單，將無法使用我們的服務。您先前並未因違反法律或我們的任何政策，而遭我們停用帳號。您不得為經判決有罪之性罪犯。\n我們必須同心協力，才能為廣大社群用戶共創安全開放的服務。不得冒充他人或提供錯誤資訊。\n您不必在 BornMeme.公開自己的身分，但必須向我們提供正確的最新資訊（包括註冊資訊），其中也可能包括提供個人資料。此外，您不得冒充他人或並非你本人的事物，且不得未經他人明確同意為其建立帳號。\n不得進行任何違法、誤導或詐欺的行為，亦禁止為達成非法或未經授權之目的而從事的一切行為。不得違反（或是協助或勸誘他人違反）本條款或我們的政策。不得以任何方式干擾或損害本服務之正常運作。包括不得濫用任何用於提出檢舉、異議或申訴的管道，例如提出詐欺或毫無根據的檢舉或申訴。不得試圖透過未經授權的方式建立帳號，或是存取或蒐集資訊。\n未經我們明確同意，亦不得透過自動化的方式建立帳號或蒐集資訊。您不得出售、授權或購買任何帳號或您從我們或我們的服務得到的資料。包括不得試圖購買、販售或轉移您帳號的任何部分（包括用戶名稱），不得徵求、蒐集或使用其他用戶的登入憑證或標章，亦不得要求或蒐集 BornMeme. 用戶名稱、密碼，或盜用存取權杖。\n未經允許，您不得發佈他人的私密或機密資訊，亦不得做出侵犯他人權利的任何行為，包括侵犯智慧財產權（例如著作權侵權、商標侵權、仿冒或盜版商品）。在適用法律所規定的著作權及相關權利之例外情況或限制條件下，您可使用他人的作品。對於您所發佈或分享的內容，您聲明您擁有或已取得所有必要權利。\n您不得對我們的產品或其元件進行修改、轉譯、創造衍生作品或反向工程。\u00A0未經我們事先書面同意，不得在用戶名稱中使用網域名稱或網址。\n您授予我們的權限。根據本協議內容，您亦授予我們提供本服務時所需的權限。我們對您提供的內容並無所有權，但您授予我們使用該內容的權限。\n您對您的內容之所有權不受影響。我們對您發佈在本服務或透過本服務發佈的內容並無所有權，您可自由選擇您要分享內容的對象和發佈位置。\u00A0不過因提供服務所需，我們需要您授予我們特定法律權限（下稱「授權」）。\n當您在我們的服務或相關平台上分享、發佈或上傳受智慧財產權保障的內容（例如相片或影片）時，即表示您授予我們非專屬、免權利金、可轉讓、可轉授權的全球授權，可以託管、使用、散佈、修改、執行、複製、公開演出或展示、翻譯您的內容，以及根據您的內容創作衍生作品（與您的隱私和應用程式設定一致）。\n如果您將內容自我們的系統刪除，此授權也將終止。您可以刪除個別內容，也能透過刪除您的帳號，將所有內容一次刪除。您同意我們得在您的裝置下載並安裝本服務的更新內容。</string>
    <string name="keep_right_title">我們保留的其他權利</string>
    <string name="keep_right_text">如果您為您的帳號選擇用戶名稱或類似的識別資料，在我們判定為適當或必要的情況下（例如該資料侵犯他人的智慧財產權或冒充其他用戶），我們得變更該項資料。如果您使用的內容屬於我們所擁有之智慧財產權涵蓋的範圍，且該智慧財產權在本服務中提供（例如您建立或分享內容時，加入我們提供的圖像、設計、影片或音效），我們保留對該內容（不包括您自有內容）的所有權利。您必須經過我們品牌準則的明確允許或事先取得我們的書面同意，才能使用我們的智慧財產和商標（或相似標記）。您必須取得我們的書面同意或在開放原始碼授權許可下，才能修改、創造衍生作品、反編譯或以其他方式試圖擷取我們的原始程式碼。</string>
    <string name="userid_delete_title">移除內容，並將您的帳號停用或停權</string>
    <string name="userid_delete_text">如果我們認為您在本服務中分享的任何內容或資訊違反了本使用條款、相關政策，或我們依法可以或必須採取行動，我們得移除這些內容或資訊。在下列情況下，我們得拒絕或立即停止向您提供全部或部分服務：\n為保護我們的社群或服務，或您使我們暴露在風險和法律問題中、違反本使用條款或我們的政策、一再侵害他人的智慧財產權，或我們依法可以或必須停止向您提供服務。\n為了避免或降低在法律或規範方面對我們的負面影響，若我們認為有其合理必要性，我們亦得終止或變更服務、移除或封鎖在我們服務分享的內容或資訊，或停止提供所有或部分服務。如果您認為將帳號停權的處置有誤，或您希望停用或永久刪除帳號，請參閱我們的使用說明。若您提出刪除內容或帳號的要求，刪除程序將在您提出要求後的 30 天內自動開始。刪除程序開始後，系統需要最多 90 天的時間來刪除內容。刪除內容的程序進行時，該內容便不再向其他用戶顯示。刪除內容後，系統可能還需要最多 90 天的時間將內容從備份和災害復原系統中移除。在下列情況下，內容不會在帳號或內容刪除程序開始後的 90 天內刪除：\n他人根據此授權使用了您的內容且並未刪除該內容（在此情況下，此授權在該內容遭到刪除前都將持續適用）因系統的技術限制而無法於 90 天內刪除，在此情況下，我們會在技術上可行時盡快完成刪除\n刪除內容會對我們進行以下事項造成限制：調查或確認非法活動或違反我們條款和政策的情況（例如：確認或調查濫用我們產品或系統的情形）\n保護我們產品、系統和用戶的網路安全及帳號安全遵守法律義務，例如保全證據，遵守司法、行政、執法機關或政府機關提出的要求，在這些情況下，我們將持續保留內容，直到不再需要為上述原因保留內容為止（實際保留時間依個案而有所不同）\n若您刪除或我們停用您的帳號，本條款效力即告終止，不再構成您與我們之間的協議，惟本節與下方「我們的協議與發生爭議時的處理方式」一節，在您帳號停權、停用或刪除後仍然適用。</string>
    <string name="argument_title">我們的協議與發生爭議時的處理方式</string>
    <string name="argument_text">您在本服務使用圖片時，亦須遵守著作權。如果您使用其他某些功能或相關服務，我們會提供附加條款，且該等條款亦將成為我們協議之一部分。本協議如有任何條款無法執行，其餘條款仍為有效。對本協議的任何修訂或拋棄必須以書面提出，並經我們簽署。如果我們未執行本協議的任何條款，並不表示我們拋棄該權利。\n我們保留所有未明確授予您的權利。本協議授予權利的對象。本協議並未將權利授予任何第三方。未經我方同意，您不得移轉本協議之權利或義務。我方的權利和義務得移轉予他人。例如，若我方的所有權變更（例如合併、收購或出售資產），或依法律要求而變更時，權利、義務便可能移轉。\n我們的服務係「依現狀」提供，我們不保證服務的運作一定安全、可靠，或不會故障。在法律允許的範圍內，我們亦明確聲明不負任何明示或默示之擔保責任，其中包括適銷性、特定用途的適用性、所有權及非侵權等擔保。\n我們無法控制其他用戶的言行，因此我們對他們（或您）的動作或行為（無論線上或離線）及分享的內容（包括違法和其他令人反感的內容）概不負任何責任。我們對其他用戶或公司提供的服務和功能概不負責，即使您透過我們的服務使用該等服務及功能亦然。\n對於發生於本服務之任何情事，我們的責任僅限於法律所要求的範圍內（亦稱「義務」）。若我們的服務發生問題，我們無法掌握所有可能的影響。您同意我們對於任何損失的利益、收益、資訊或資料，以及因本條款所生或相關的任何結果性、特殊、間接、儆戒性、懲罰性或附帶性損害賠償，概不負責，即便在我們已得知可能發生該等損害賠償的情況下亦然。我們刪除您的內容、資料或帳號時，亦適用本條件。\n如果您是消費者，您與我們之間因本條款所產生或與之相關的任何索賠、訴訟原因或爭議（下稱「索賠」），皆適用您所居住國家／地區的法律，而且您也可以尋求該國家/地區具有索賠管轄權的管轄法院解決索賠事宜。\n我們一向樂意聽取意見回饋或其他建議，但我們得使用這些內容，而無須向您提供任何報酬，對相關內容亦無保密義務。</string>
    <string name="update_title">更新本條款</string>
    <string name="update_text">本服務和政策可能時有變更，因此我們可能須修改本條款，以確實反映服務與政策內容。除法律另有規定者外，我們會於變更本條款內容前事先通知您（例如透過本服務等管道），讓您可在變更內容生效前審閱相關條款。若您仍繼續使用本服務，即表示您願意受新修訂的條款內容約束。如果您不同意本條款或任何新版條款，您可以在此刪除帳號。</string>
    <string name="service_date">修訂日期：2022 年 12 月 09 日</string>
    <string name="service_agree_text">我已詳細閱讀並同意使用條款內容且願意履行遵守承諾</string>
    <string name="private_text_context">非常歡迎您使用 BornMeme.（以下簡稱本應用程式），為了讓您能夠安心的使用本應用程式的各項服務與資訊，特此向您說明本應用程式的隱私權保護政策，以保障您的權益，請您詳閱下列內容：</string>
    <string name="protect_title">隱私權保護政策的適用範圍</string>
    <string name="protect_text">隱私權保護政策內容，包括本網站如何處理在您使用網站服務時收集到的個人識別資料。隱私權保護政策不適用於本應用程式以外的相關連結，也不適用於非本應用程式所委託或參與管理的人員。</string>
    <string name="collection_title">個人資料的蒐集、處理及利用方式</string>
    <string name="collection_text">當您造訪本應用程式或使用本應用程式所提供之功能服務時，我們將視該服務功能性質，請您提供必要的個人資料，並在該特定目的範圍內處理及利用您的個人資料；非經您書面同意，本應用程式不會將個人資料用於其他用途。本應用程式在您使用服務信箱、問卷調查等互動性功能時，會保留您所提供的姓名、電子郵件地址、聯絡方式及使用時間等。\n於一般瀏覽時，伺服器會自行記錄相關行徑，包括您使用連線設備的 IP 位址、使用時間、使用的瀏覽器、瀏覽及點選資料記錄等，做為我們增進服務的參考依據，此記錄為內部應用，決不對外公佈。為提供精確的服務，我們會將收集的問卷調查內容進行統計與分析，分析結果之統計數據或說明文字呈現，除供內部研究外，我們會視需要公佈統計數據及說明文字，但不涉及特定個人之資料。您可以隨時向我們提出請求，以更正或刪除您的帳戶或本應用程式所蒐集的個人資料等隱私資訊。聯繫方式請見最下方聯繫管道。</string>
    <string name="protect_info_title">資料之保護</string>
    <string name="protect_info_text">本應用程式主機均設有防火牆、防毒系統等相關的各項資訊安全設備及必要的安全防護措施，加以保護應用程式及您的個人資料採用嚴格的保護措施，只由經過授權的人員才能接觸您的個人資料，相關處理人員皆簽有保密合約，如有違反保密義務者，將會受到相關的法律處分。\n如因業務需要有必要委託其他單位提供服務時，本應用程式亦會嚴格要求其遵守保密義務，並且採取必要檢查程序以確定其將確實遵守。</string>
    <string name="link_title">對外的相關連結</string>
    <string name="link_text">本應用程式的網頁提供其他網站的網路連結，您也可經由本應用程式所提供的連結，點選進入其他應用程式。但該連結應用程式不適用本應用程式的隱私權保護政策，您必須參考該連結中的隱私權保護政策。</string>
    <string name="share_title">與第三人共用個人資料之政策</string>
    <string name="share_text">本應用程式絕不會提供、交換、出租或出售任何您的個人資料給其他個人、團體、私人企業或公務機關，但有法律依據或合約義務者，不在此限。\n前項但書之情形包括不限於以下情況：\n經由您書面同意、法律明文規定。\n為免除您生命、身體、自由或財產上之危險。\n與公務機關或學術研究機構合作，基於公共利益為統計或學術研究而有必要，且資料經過提供者處理或蒐集者依其揭露方式無從識別特定之當事人。\n當您在應用程式的行為，違反服務條款或可能損害或妨礙應用程式與其他使用者權益或導致任何人遭受損害時，經應用程式管理單位研析揭露您的個人資料是為了辨識、聯絡或採取法律行動所必要者。\n有利於您的權益，本應用程式委託廠商協助蒐集、處理或利用您的個人資料時，將對委外廠商或個人善盡監督管理之責。</string>
    <string name="cookie_title">Cookie 之使用</string>
    <string name="cookie_text">為了提供您最佳的服務，本應用程式會在您的電腦中放置並取用我們的 Cookie，若您不願接受 Cookie 的寫入，您可在您使用的瀏覽器功能項中設定隱私權等級為高，即可拒絕 Cookie 的寫入，但可能會導致應用程式某些功能無法正常執行 。</string>
    <string name="adjust_title">隱私權保護政策之修正</string>
    <string name="adjust_text">本應用程式隱私權保護政策將因應需求隨時進行修正，修正後的條款將刊登於網站上。</string>
    <string name="contact_title">聯繫管道</string>
    <string name="contact_text">對於本站之隱私權政策有任何疑問，或者想提出變更、移除個人資料之請求，請以此 Email 聯繫我們 bevalin09@gmail.com</string>
</resources>